--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>edu.umass.ciir</groupId>
-  <artifactId>RankLib</artifactId>
+  <artifactId>RankLib-jt</artifactId>
   <version>2.6</version>
   <packaging>jar</packaging>
   <name>RankLib</name>
