--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,15 @@
     <javaVersion>1.8</javaVersion>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
   <distributionManagement>
     <repository>
       <id>deployment</id>
